feat: update basic page layout

--- a/index.html
+++ b/index.html
@@ -49,9 +49,9 @@
 
                     <h3>Professional skills:</h3>
                     <ul>
-                        <li>Basic knowledge of languages: JS, NodeJS;</li>
-                        <li>HTML5/CSS3;</li>
-                        <li>Microsoft SQL Server, MongoDB.</li>
+                        <li>Basic knowledge of languages: JS, NodeJS</li>
+                        <li>HTML5/CSS3</li>
+                        <li>Microsoft SQL Server, MongoDB</li>
                     </ul>
 
 
